2009-07-02  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml More robust handling of invalid chars

2009-06-30  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Several bugfixes.
	* html2xhtml Released as 1.1.2-rc2

2009-05-28  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Updated DTD data.

2009-04-13  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as 1.1.2-rc1

2009-04-08  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml End-of-line (UNIX-like or DOS-like) characters can be
	chosen with a command-line parameter.
	* html2xhtml Improved documentation.

2009-03-26  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Updated DTD data.

2009-03-25  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Redesigned CGI-handling code. Support to both
	multipart/form-data input and direct (text/html) input.

2009-03-10  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml New --compact-empty-elem-tags option. Renamed
	option --empty-elm-tags-always.
	* html2xhtml Support for many input/output character sets using iconv.

2009-03-03  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Adapted the lexer to recent flex versions (2.5.35)

2008-07-28  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml New test system, to help to detect regressions.

2008-07-27  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Empty element tags written only for elements 
	declared as empty in DTD.

2008-06-26  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Updated DTD data.
	* html2xhtml Ported dtd_query from the old source tree.

2008-06-17  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as stable, version 1.1.1.

2008-05-29  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Removed the REJECT rule from the parser.

2008-05-22  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Fixed a bug in the CGI related to charset.

2008-04-17  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as 1.1b6
