@@ -1,3 +1,8 @@
+2009-07-03  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml More robust HTML parser, using the Bison's error
+	recovery mechanism.
+
 2009-07-02  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml More robust handling of invalid chars
